--- a/pages/carro.html
+++ b/pages/carro.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
     
 <!--Metadatos-->
 
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Registrar Usuario - ChangeWear</title>
     <meta name="description" content="Sitio de venta online (Beta)">
-    <link rel="icon" href="img/cwIcon.png" type="image/png">
+    <link rel="icon" href="../img/cwIcon.png" type="image/png">
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <!-- Bootstrap -->
@@ -32,13 +32,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
-                    <li class="nav-item ">
-                        <a class="nav-link" href="index.html">Inicio<span class="sr-only">(actual)</span></a>
-                    </li>
                     <li class="nav-item " >
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
@@ -54,21 +51,8 @@
                             <i class="fas fa-user"></i> Usuario
                         </a>
                     </li>
-                    <!-- Botón del carro de compras 1 -->
-                    <li class="nav-item dropdown d-lg-none">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
-                            <i class="fas fa-shopping-cart"></i> Carro de compra
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">Item 1</a>
-                            <a class="dropdown-item" href="#">Item 2</a>
-                            <a class="dropdown-item" href="#">Item 3</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="carro.html"><small>Carro</small></a>
-                        </div>
-                    </li>
                 </ul>
+                <!--Barra de busqueda -->
                 <form class="form-inline my-0 mr-0 nav-item">
                     <input class="form-control mr-0 text_area" type="search" placeholder="Buscar" aria-label="Buscar">
                     <button class="btn btn-outline-success my-1 my-md-0" type="submit"><i
@@ -82,17 +66,9 @@
                 </div>
                 <!-- Botón del carro de compras 2-->
                 <div class="btn-group dropdown ml-2 d-none d-lg-block">
-                    <a class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
+                    <a class="btn btn-danger" href="carro.html">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" href="#">Item 1</a>
-                        <a class="dropdown-item" href="#">Item 2</a>
-                        <a class="dropdown-item" href="#">Item 3</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Ver carro</a>
-                    </div>
                 </div>
             </div>
         </nav>
@@ -210,7 +186,7 @@
                       <a href="#" class="btn btn-primary mb-4 btn-lg pl-5 pr-5">Comprar</a>
                   </div>
                   <div class="col-sm-6 mb-3 mb-m-1 order-md-1 text-md-left">
-                      <a href="index.html">
+                      <a href="../index.html">
                           <i class="fas fa-arrow-left mr-2"></i> Continuar Comprando</a>
                   </div>
               </div>
