--- a/pages/carro.html
+++ b/pages/carro.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="es">
-    
+
 <!--Metadatos-->
 
 <head>
@@ -36,7 +36,7 @@
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
-                    <li class="nav-item " >
+                    <li class="nav-item ">
                         <a class="nav-link" href="mujeres.html">Mujeres</a>
                     </li>
                     <li class="nav-item ">
@@ -76,168 +76,173 @@
     <main>
         <section class="pt-5 pb-5">
             <div class="container">
-              <div class="row w-100">
-                  <div class="col-lg-12 col-md-12 col-12">
-                      <h3 class="display-5 mb-2 text-center">Carro de Compra</h3>
-                      <p class="mb-5 text-center">
-                          <i class="text-info font-weight-bold">3</i> productos en el carro</p>
-                      <table id="shoppingCart" class="table table-condensed table-responsive">
-                          <thead>
-                              <tr>
-                                  <th style="width:60%">Producto</th>
-                                  <th style="width:12%">Precio</th>
-                                  <th style="width:10%">Cantidad</th>
-                                  <th style="width:16%"></th>
-                              </tr>
-                          </thead>
-                          <tbody>
-                              <tr>
-                                  <td data-th="Product">
-                                      <div class="row">
-                                          <div class="col-md-3 text-left">
-                                              <img src="https://via.placeholder.com/250" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
-                                          </div>
-                                          <div class="col-md-9 text-left mt-sm-2">
-                                              <h4>Producto</h4>
-                                              <p class="font-weight-light">Marca del producto</p>
-                                          </div>
-                                      </div>
-                                  </td>
-                                  <td data-th="Price">$999</td>
-                                  <td data-th="Quantity">
-                                      <input type="number" class="form-control form-control-lg text-center" value="1">
-                                  </td>
-                                  <td class="actions" data-th="">
-                                      <div class="text-right">
-                                          <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                              <i class="fas fa-sync"></i>
-                                          </button>
-                                          <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                              <i class="fas fa-trash"></i>
-                                          </button>
-                                      </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                <td data-th="Product">
-                                    <div class="row">
-                                        <div class="col-md-3 text-left">
-                                            <img src="https://via.placeholder.com/250" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                <div class="row w-100">
+                    <div class="col-lg-12 col-md-12 col-12">
+                        <h3 class="display-5 mb-2 text-center">Carro de Compra</h3>
+                        <p class="mb-5 text-center">
+                            <i class="text-info font-weight-bold">3</i> productos en el carro
+                        </p>
+                        <table id="shoppingCart" class="table table-condensed table-responsive">
+                            <thead>
+                                <tr>
+                                    <th style="width:60%">Producto</th>
+                                    <th style="width:12%">Precio</th>
+                                    <th style="width:10%">Cantidad</th>
+                                    <th style="width:16%"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td data-th="Product">
+                                        <div class="row">
+                                            <div class="col-md-3 text-left">
+                                                <img src="https://via.placeholder.com/250" alt=""
+                                                    class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                            </div>
+                                            <div class="col-md-9 text-left mt-sm-2">
+                                                <h4>Producto</h4>
+                                                <p class="font-weight-light">Marca del producto</p>
+                                            </div>
                                         </div>
-                                        <div class="col-md-9 text-left mt-sm-2">
-                                            <h4>Producto</h4>
-                                            <p class="font-weight-light">Marca del producto</p>
+                                    </td>
+                                    <td data-th="Price">$999</td>
+                                    <td data-th="Quantity">
+                                        <input type="number" class="form-control form-control-lg text-center" value="1">
+                                    </td>
+                                    <td class="actions" data-th="">
+                                        <div class="text-right">
+                                            <button class="btn btn-white border-secondary bg-white btn-md mb-2">
+                                                <i class="fas fa-sync"></i>
+                                            </button>
+                                            <button class="btn btn-white border-secondary bg-white btn-md mb-2">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
                                         </div>
-                                    </div>
-                                </td>
-                                <td data-th="Price">$999</td>
-                                <td data-th="Quantity">
-                                    <input type="number" class="form-control form-control-lg text-center" value="1">
-                                </td>
-                                <td class="actions" data-th="">
-                                    <div class="text-right">
-                                        <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                            <i class="fas fa-sync"></i>
-                                        </button>
-                                        <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                            <i class="fas fa-trash"></i>
-                                        </button>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td data-th="Product">
-                                    <div class="row">
-                                        <div class="col-md-3 text-left">
-                                            <img src="https://via.placeholder.com/250" alt="" class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td data-th="Product">
+                                        <div class="row">
+                                            <div class="col-md-3 text-left">
+                                                <img src="https://via.placeholder.com/250" alt=""
+                                                    class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                            </div>
+                                            <div class="col-md-9 text-left mt-sm-2">
+                                                <h4>Producto</h4>
+                                                <p class="font-weight-light">Marca del producto</p>
+                                            </div>
                                         </div>
-                                        <div class="col-md-9 text-left mt-sm-2">
-                                            <h4>Producto</h4>
-                                            <p class="font-weight-light">Marca del producto</p>
+                                    </td>
+                                    <td data-th="Price">$999</td>
+                                    <td data-th="Quantity">
+                                        <input type="number" class="form-control form-control-lg text-center" value="1">
+                                    </td>
+                                    <td class="actions" data-th="">
+                                        <div class="text-right">
+                                            <button class="btn btn-white border-secondary bg-white btn-md mb-2">
+                                                <i class="fas fa-sync"></i>
+                                            </button>
+                                            <button class="btn btn-white border-secondary bg-white btn-md mb-2">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
                                         </div>
-                                    </div>
-                                </td>
-                                <td data-th="Price">$999</td>
-                                <td data-th="Quantity">
-                                    <input type="number" class="form-control form-control-lg text-center" value="1">
-                                </td>
-                                <td class="actions" data-th="">
-                                    <div class="text-right">
-                                        <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                            <i class="fas fa-sync"></i>
-                                        </button>
-                                        <button class="btn btn-white border-secondary bg-white btn-md mb-2">
-                                            <i class="fas fa-trash"></i>
-                                        </button>
-                                    </div>
-                                </td>
-                            </tr>
-                          </tbody>
-                      </table>
-                      <div class="float-right text-right">
-                          <h4>Total Parcial:</h4>
-                          <h1>$9999</h1>
-                          <small>+ Coste de Envio: $100</small>
-                      </div>
-                  </div>
-              </div>
-              <div class="row mt-4 d-flex align-items-center">
-                  <div class="col-sm-6 order-md-2 text-right">
-                      <a href="#" class="btn btn-primary mb-4 btn-lg pl-5 pr-5">Comprar</a>
-                  </div>
-                  <div class="col-sm-6 mb-3 mb-m-1 order-md-1 text-md-left">
-                      <a href="../index.html">
-                          <i class="fas fa-arrow-left mr-2"></i> Continuar Comprando</a>
-                  </div>
-              </div>
-          </div>
-          </section>
-
-
-    <!-- Aquí va el footer -->
-    <footer class="bg-dark text-white my-0 mx-0 pt-4 pb-2 main-footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md">
-                    <h3 class="text-uppercase">Logo</h3>
-                    <p>Logo de la compañía</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td data-th="Product">
+                                        <div class="row">
+                                            <div class="col-md-3 text-left">
+                                                <img src="https://via.placeholder.com/250" alt=""
+                                                    class="img-fluid d-none d-md-block rounded mb-2 shadow ">
+                                            </div>
+                                            <div class="col-md-9 text-left mt-sm-2">
+                                                <h4>Producto</h4>
+                                                <p class="font-weight-light">Marca del producto</p>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td data-th="Price">$999</td>
+                                    <td data-th="Quantity">
+                                        <input type="number" class="form-control form-control-lg text-center" value="1">
+                                    </td>
+                                    <td class="actions" data-th="">
+                                        <div class="text-right">
+                                            <button class="btn btn-white border-secondary bg-white btn-md mb-2">
+                                                <i class="fas fa-sync"></i>
+                                            </button>
+                                            <button class="btn btn-white border-secondary bg-white btn-md mb-2">
+                                                <i class="fas fa-trash"></i>
+                                            </button>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="float-right text-right">
+                            <h4>Total Parcial:</h4>
+                            <h1>$9999</h1>
+                            <small>+ Coste de Envio: $100</small>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md">
-                    <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
-                    <ul class="mb-0 pb-2">
-                        <li>Nuestra Visión</li>
-                        <li>Noticias</li>
-                        <li>Empleo</li>
-                    </ul>
-                </div>
-                <div class="col-md">
-                    <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
-                    <ul class="mb-0 pb-2">
-                        <li>Pedidos</li>
-                        <li>Cambios y Devoluciones</li>
-                        <li>Formas de Pago</li>
-                        <li>Comunícate con Nosotros</li>
-                    </ul>
+                <div class="row mt-4 d-flex align-items-center">
+                    <div class="col-sm-6 order-md-2 text-right">
+                        <a href="#" class="btn btn-primary mb-4 btn-lg pl-5 pr-5">Comprar</a>
+                    </div>
+                    <div class="col-sm-6 mb-3 mb-m-1 order-md-1 text-md-left">
+                        <a href="../index.html">
+                            <i class="fas fa-arrow-left mr-2"></i> Continuar Comprando</a>
+                    </div>
                 </div>
             </div>
-            <hr class="footer-hr my-2 py-0"/>
-            <div class="row">
-                <div class="col-4 text-left">
-                    <i class="fab fa-twitter mx-1 text-info"></i>
-                    <i class="fab fa-facebook-f mx-1 text-info"></i>
-                    <i class="fab fa-instagram mx-1 text-info"></i>
+        </section>
+
+
+        <!-- Aquí va el footer -->
+        <footer class="bg-dark text-white my-0 mx-0 pt-4 pb-2 main-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md">
+                        <h3 class="text-uppercase">Logo</h3>
+                        <p>Logo de la compañía</p>
+                    </div>
+                    <div class="col-md">
+                        <h6 class="text-uppercase text-warning">Sobre Nosotros</h6>
+                        <ul class="mb-0 pb-2">
+                            <li>Nuestra Visión</li>
+                            <li>Noticias</li>
+                            <li>Empleo</li>
+                        </ul>
+                    </div>
+                    <div class="col-md">
+                        <h6 class="text-uppercase text-warning">Obtener Ayuda</h6>
+                        <ul class="mb-0 pb-2">
+                            <li>Pedidos</li>
+                            <li>Cambios y Devoluciones</li>
+                            <li>Formas de Pago</li>
+                            <li>Comunícate con Nosotros</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-8 text-right copyright">
-                    Todos los derechos reservados.
+                <hr class="footer-hr my-2 py-0" />
+                <div class="row">
+                    <div class="col-4 text-left">
+                        <i class="fab fa-twitter mx-1 text-info"></i>
+                        <i class="fab fa-facebook-f mx-1 text-info"></i>
+                        <i class="fab fa-instagram mx-1 text-info"></i>
+                    </div>
+                    <div class="col-8 text-right copyright">
+                        Todos los derechos reservados.
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+            crossorigin="anonymous"></script>
 </body>
+
 </html>
