--- a/pages/mujeres.html
+++ b/pages/mujeres.html
@@ -32,57 +32,40 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- Marca de la página -->
-            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="../index.html">ChangeWear</a>
+            <a class="navbar-brand ml-2 ml-lg-0 mr-auto mr-lg-2" href="index.html">ChangeWear<span
+                    class="sr-only">(actual)</span></a>
             <!-- Los items del Navbar -->
             <div class="collapse navbar-collapse" id="navbarTogglerMain">
                 <ul class="navbar-nav mr-auto mt-1 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="mujeres.html">Mujeres<span class="sr-only">(actual)</span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="hombre.html">Hombres</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/mujeres.html">Mujeres</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ninos.html">Niños</a>
+                        <a class="nav-link" href="pages/hombre.html">Hombres</a>
                     </li>
-                    <!-- Botón del usuario 1 -->
-                    <li class="nav-item d-lg-none">
-                        <a class="nav-link" href="registroUsuario.html">
-                            <i class="fas fa-user"></i> Usuario
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/ninos.html">Niños</a>
+                    </li>
+
+                </ul>
+
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                </form>
+                <ul class="navbar-nav mt-1 mt-lg-0">
+                    <li class="nav-item my-2">
+                        <a class="btn btn-danger" href="pages/carro.html">
+                            <i class="fas fa-shopping-cart"></i>
                         </a>
                     </li>
-                    <!-- Botón del carro de compras 1 -->
-                    <li class="nav-item dropdown d-lg-none">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
-                            <i class="fas fa-shopping-cart"></i> Carro de compra
+                    <li class="nav-item my-2">
+                        <a class="btn btn-info" href="pages/registroUsuario.html">
+                            <i class="fas fa-user"></i>
                         </a>
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">Item 1</a>
-                            <a class="dropdown-item" href="#">Item 2</a>
-                            <a class="dropdown-item" href="#">Item 3</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Ver carro</a>
-                        </div>
                     </li>
                 </ul>
-                <form class="form-inline my-0 mr-0 nav-item">
-                    <input class="form-control mr-0 text_area" type="search" placeholder="Buscar" aria-label="Buscar">
-                    <button class="btn btn-outline-success my-1 my-md-0" type="submit"><i
-                            class="fas fa-search"></i></button>
-                </form>
-                <!-- Botón de Usuario -->
-                <div class="btn-group dropdown ml-2 d-none d-lg-block">
-                    <a class="btn btn-info" href="registroUsuario.html">
-                        <i class="fas fa-user"></i>
-                    </a>
-                </div>
-                <!-- Botón del carro de compras 2-->
-                <div class="btn-group dropdown ml-2 d-none d-lg-block">
-                    <a class="btn btn-danger" href="carro.html">
-                        <i class="fas fa-shopping-cart"></i>
-                    </a>
-                </div>
+
             </div>
         </nav>
     </header>
@@ -226,7 +209,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </section>
 
     </main>
